--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 # DataSource
-spring.datasource.url=jdbc:h2:../database/careers
+spring.datasource.url=jdbc:h2:./database/careers
 spring.datasource.username=sa
 spring.datasource.password=samsung
 spring.h2.console.enabled=true
