--- a/build.gradle
+++ b/build.gradle
@@ -1,3 +1,5 @@
+import static jdk.nashorn.internal.objects.NativeRegExp.compile
+
 plugins {
 	id 'org.springframework.boot' version '2.5.7'
 	id 'io.spring.dependency-management' version '1.0.11.RELEASE'
@@ -7,6 +9,7 @@ plugins {
 
 group = 'com.samsung'
 version = '0.0.1-SNAPSHOT'
+compileJava.options.encoding = 'UTF-8'
 sourceCompatibility = '1.8'
 
 configurations {
@@ -23,10 +26,13 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-freemarker'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.springframework.boot:spring-boot-starter-jdbc'
-	// https://mvnrepository.com/artifact/org.mybatis.spring.boot/mybatis-spring-boot-starter
-	implementation group: 'org.mybatis.spring.boot', name: 'mybatis-spring-boot-starter', version: '2.2.0'
 	implementation 'org.projectlombok:lombok:1.18.20'
     implementation 'junit:junit:4.13.1'
+	implementation 'commons-fileupload:commons-fileupload:1.4'
+	// https://mvnrepository.com/artifact/org.mybatis.spring.boot/mybatis-spring-boot-starter
+	implementation group: 'org.mybatis.spring.boot', name: 'mybatis-spring-boot-starter', version: '2.2.0'
+	// https://mvnrepository.com/artifact/org.springframework.mobile/spring-mobile-device
+	implementation 'org.springframework.mobile:spring-mobile-device:1.1.3.RELEASE'
     compileOnly 'org.projectlombok:lombok'
 	annotationProcessor 'org.projectlombok:lombok'
 	runtimeOnly('com.h2database:h2')
