--- a/build.gradle
+++ b/build.gradle
@@ -26,13 +26,13 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-freemarker'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.springframework.boot:spring-boot-starter-jdbc'
+	implementation 'org.springframework:spring-aop:5.2.11.RELEASE' // https://mvnrepository.com/artifact/org.springframework/spring-aop
+	implementation 'org.springframework:spring-aspects:5.2.11.RELEASE' // https://mvnrepository.com/artifact/org.springframework/spring-aspects
 	implementation 'org.projectlombok:lombok:1.18.20'
     implementation 'junit:junit:4.13.1'
 	implementation 'commons-fileupload:commons-fileupload:1.4'
-	// https://mvnrepository.com/artifact/org.mybatis.spring.boot/mybatis-spring-boot-starter
-	implementation group: 'org.mybatis.spring.boot', name: 'mybatis-spring-boot-starter', version: '2.2.0'
-	// https://mvnrepository.com/artifact/org.springframework.mobile/spring-mobile-device
-	implementation 'org.springframework.mobile:spring-mobile-device:1.1.3.RELEASE'
+	implementation group: 'org.mybatis.spring.boot', name: 'mybatis-spring-boot-starter', version: '2.2.0' // https://mvnrepository.com/artifact/org.mybatis.spring.boot/mybatis-spring-boot-starter
+	implementation 'org.springframework.mobile:spring-mobile-device:1.1.3.RELEASE' // https://mvnrepository.com/artifact/org.springframework.mobile/spring-mobile-device
     compileOnly 'org.projectlombok:lombok'
 	annotationProcessor 'org.projectlombok:lombok'
 	runtimeOnly('com.h2database:h2')
