--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,6 @@
+spring.profiles.active=local
+# log
+
 # DataSource
 spring.datasource.url=jdbc:h2:./database/careers
 spring.datasource.username=sa
