12월8일 파일 업로듶commit..

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.profiles.active=local
 # log
-
+logging.level.root=debug
 # DataSource
 spring.datasource.url=jdbc:h2:./database/careers
 spring.datasource.username=sa
@@ -8,9 +8,11 @@ spring.datasource.password=samsung
 spring.h2.console.enabled=true
 spring.datasource.generate-unique-name=false
 spring.datasource.hikari.maximum-pool-size=4
-
+#freemarker
 spring.freemarker.template-loader-path=classpath:/templates
 spring.freemarker.suffix=.ftl
-
+#file upload
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=50MB
 
 
