--- a/build.gradle
+++ b/build.gradle
@@ -31,7 +31,8 @@ dependencies {
 	implementation 'org.projectlombok:lombok:1.18.20'
     implementation 'junit:junit:4.13.1'
 	implementation 'org.apache.commons:commons-lang3:3.11' // https://mvnrepository.com/artifact/org.apache.commons/commons-lang3
-	implementation 'commons-fileupload:commons-fileupload:1.4'
+	implementation 'commons-fileupload:commons-fileupload:1.4' // https://mvnrepository.com/artifact/commons-io/commons-io
+	implementation 'commons-io:commons-io:2.11.0' // https://mvnrepository.com/artifact/commons-io/commons-io
 	implementation group: 'org.mybatis.spring.boot', name: 'mybatis-spring-boot-starter', version: '2.2.0' // https://mvnrepository.com/artifact/org.mybatis.spring.boot/mybatis-spring-boot-starter
 	implementation 'org.springframework.mobile:spring-mobile-device:1.1.3.RELEASE' // https://mvnrepository.com/artifact/org.springframework.mobile/spring-mobile-device
     compileOnly 'org.projectlombok:lombok'
