--- a/package.json
+++ b/package.json
@@ -22,16 +22,11 @@
   "homepage": "https://github.com/matthaeus-k/samsung.careers#readme",
   "devDependencies": {
     "eslint": "^8.4.1",
-    "eslint-config-google": "^0.14.0",
-    "eslint-loader": "^4.0.2",
-    "eslint-plugin-import": "^2.25.3",
     "eslint-webpack-plugin": "^3.1.1",
     "glob": "^7.2.0",
     "lodash": "^4.17.21",
     "webpack": "^5.65.0",
     "webpack-cli": "^4.9.1"
   },
-  "dependencies": {
-    "eslint-config-standard": "^16.0.3"
-  }
+  "dependencies": {}
 }
